--- a/main.css
+++ b/main.css
@@ -7,8 +7,28 @@ h1 {
     text-align: center;
     font-size: 110px;
     letter-spacing: 0.05em;
+    margin: 0;
+    padding-top: 20vh;;
   }
 
-#main-title {
-    padding-top: 100px;
+h2 {
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 0.05em;
+    margin-top: 50px;
+    color: #606060;
+    text-decoration: none;
+}
+
+a:link, a:visited {
+    text-decoration: none;
+    color: #606060;
+}
+
+a:hover {
+    color: #909090
+}
+
+a:active {
+    color: white;
 }
